# SOL-Execbench

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.txt  pyproject.toml
docker/: Dockerfile  entrypoint.sh
docs/: definition.md  solution.md  trace.md  workload.md
examples/cuda_cpp/flux_rope/: definition.json  kernel.cu  reference.py  solution_cuda.json
examples/cuda_cpp/rmsnorm/: definition.json  kernel.cu  kernel.h  main.cpp  solution_cuda.json
examples/cudnn/softmax/: definition.json  main.cu  reference.py  solution_cudnn.json  workload.jsonl
examples/cute_dsl/jamba_attn_proj/: definition.json  kernel.py  reference.py  solution_cute_dsl.json
examples/cutile/jamba_attn_proj/: kernel.py  solution_cutile.json  workload.jsonl
examples/cutlass/gemm/: definition.json  kernel.cu  kernel.h  main.cpp  reference.py  solution_cutlass.json  workload.jsonl
examples/pytorch/gemma3_swiglu/: kernel.py  solution_python.json  workload.jsonl
examples/pytorch/linear_backward/: kernel.py  reference.py  workload.jsonl
examples/triton/nemotron_rms_norm/: definition.json  kernel.py  solution_triton.json
examples/triton/olmo3_post_norm/: definition.json  kernel.py  reference.py
examples/triton/rmsnorm/: kernel.py  reference.py  solution_triton.json  workload.jsonl
scripts/: download_data.sh  download_solexecbench.py  run_dataset.py  run_docker.sh
src/sol_execbench/: __init__.py  sol_score.py
src/sol_execbench/cli/: main.py  (+1 more)
tests/: conftest.py
tests/examples/: test_examples.py
tests/sol_execbench/: test_e2e.py
(+77 files in other folders)
